--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="style.css" >
     <title>About</title>
   </head>
   <body>
@@ -11,9 +11,9 @@
       <h1>LH Cosmetics</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Start</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Om oss</a></li>
         </ul>
       </nav>
     </header>
@@ -22,9 +22,9 @@
       <section id="page-intro">
         <h2>Undrar du vilka vi är?</h2>
         <p>
-          här hittar du en liten samling video tutorials som är utformade för
-          att guida dig steg för steg genom olika makeup-tekniker. Våra
-          makeup-experter delar med sig av sina hemligheter och ger dig de bästa
+          Vi är LH Cosmetics, ett dedikerat team som tror på att skapa
+          högkvalitativa skönhetsprodukter och inspirera människor till att
+          uttrycka sig fritt, med eller utan smink. Lär känna oss bättre nedan!
         </p>
       </section>
 
@@ -32,24 +32,52 @@
         <div class="container">
           <div class="section-head">
             <div class="text-container">
-              <h3>Grundaren Linda Hallberg</h3>
+              <h2 class="uppercase">Grundaren Linda Hallberg</h2>
+              <h4>Från Husvagn till Sminkikon</h4>
               <p>
-                Linda Hallberg är certifierad makeupartist och hårstylist sedan
-                2008. Hon är baserad i Stockholm men kommer ursprungligen från
-                den lilla staden Sölvesborg i södra Sverige.
+                Linda Hallberg, certifierad makeupartist och hårstylist sedan
+                2008, har gått från att börja sitt sminkäventyr i en husvagn
+                utan rinnande vatten till att bli en hyllad sminkikon med över
+                en miljon följare på sociala medier.
+              </p>
+
+              <h4>LH Cosmetics och Kreativ Vision</h4>
+              <p>
+                Lindas passion för färg och önskan att bryta traditionella
+                skönhetsregler ledde till skapandet av LH Cosmetics. Hennes
+                vision är att göra smink mer lekfullt och inkluderande, och
+                inspirera människor att uttrycka sig fritt, med eller utan
+                smink.
               </p>
             </div>
 
             <div class="image-container">
-              <img src="pictures/linda hallberg" alt="bild på Linda Hallberg" />
+              <img src="pictures/linda-hallberg" alt="bild på Linda Hallberg" >
             </div>
           </div>
           <div class="section-content">
             <h3>Teamet bakom LH Cosmetics</h3>
+            <div class="animation"></div>
+            <h4>Vår framgång</h4>
             <p>
-              Linda Hallberg är certifierad makeupartist och hårstylist sedan
-              2008. Hon är baserad i Stockholm men kommer ursprungligen från den
-              lilla staden Sölvesborg i södra Sverige.
+              bygger på hårt, ihärdigt och målmedvetet arbete. Att leverera
+              högkvalitativa produkter till våra kunder är alltid vårt
+              huvudfokus. Vårt främsta mål är att inspirera människor att vara
+              fria i sitt uttryck med eller utan smink.
+            </p>
+
+            <h4>Vår kultur</h4>
+            <p>
+              Vi har roligt tillsammans och har en stark kultur av att alla är
+              med och påverkar. Teamets idéer och egna initiativ är inte bara
+              välkomna utan en förutsättning för att vi som företag ska
+              fortsätta driva utvecklingen i branschen.
+            </p>
+
+            <h4>Möt våra stjärnor</h4>
+            <p>
+              och kontakta oss gärna om du har några frågor eller bara vill
+              prata om skönhet – det är vi bra på.
             </p>
           </div>
         </div>
@@ -61,5 +89,7 @@
         <p>&copy; 2023 Makeup Tutorial</p>
       </div>
     </footer>
+    <a href="#page-intro" class="ankarlänk">gå upp</a>
+
   </body>
 </html>
