--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="style.css" >
     <title>LH Cosmetics</title>
   </head>
   <body>
@@ -11,9 +11,9 @@
       <h1>LH Cosmetics</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Start</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Om oss</a></li>
         </ul>
       </nav>
     </header>
@@ -22,7 +22,7 @@
       <section id="page-intro">
         <h2>Välkommen till LH Cosmetics Makeup Tutorial World!</h2>
         <p>
-          <span
+          <span class="sidenote"
             >Här hittar du massor av användbara makeup tips och tricks för att
             uppnå den perfekta looken.</span
           >
@@ -34,17 +34,15 @@
         </p>
         <h3>Upptäck Våra Video Tutorials</h3>
         <p>
-          Under fliken "Tutorials" hittar du en liten samling video tutorials
-          som är utformade för att guida dig steg för steg genom olika
-          makeup-tekniker. Våra makeup-experter delar med sig av sina
-          hemligheter och ger dig de bästa tipsen för att uppnå en professionell
-          look. Oavsett om du vill behärska smokey eyes, contouring, eller skapa
-          den perfekta röda läppen, våra tutorials är här för att hjälpa dig. Vi
-          förstår att varje person har sin egen unika stil och sminkpreferens.
-          Därför inkluderar våra tutorials olika looks, från naturlig
-          vardagsmakeup till glamorösa festmakeuper. Du kommer att lära dig
-          användbara tekniker och få insikt i de senaste trenderna inom
-          makeupvärlden.
+          Under fliken "Tutorials" i menyn hittar du en liten samling video
+          tutorials som är utformade för att guida dig steg för steg genom olika
+          makeup-tekniker.
+        </p>
+        <p>
+          Våra makeup-experter på LH Cosmetics delar med sig av sina hemligheter
+          och ger dig de bästa tipsen för att uppnå en professionell look. Du
+          kommer att lära dig användbara tekniker och få insikt i de senaste
+          trenderna inom makeupvärlden.
         </p>
       </section>
 
@@ -67,7 +65,7 @@
                 href="https://artdeco.com/blogs/make-up-guides/perfect-eyebrows"
               >
                 <div class="card-image">
-                  <img src="pictures/eyebrows.jpg" alt="" />
+                  <img src="pictures/eyebrows.jpg" alt="" >
                 </div>
                 <div class="card-text">
                   <div class="card-title">
@@ -81,8 +79,8 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-btn" >
-                  <button class="uppercase" type="button">läs mer</button>
+                <div class="card-btn">
+                  <span class="uppercase">läs mer</span>
                 </div>
               </a>
             </article>
@@ -92,7 +90,7 @@
                 href="https://www.cosmopolitan.com/style-beauty/beauty/how-to/a6265/makeup-tricks-every-woman-should-know/"
               >
                 <div class="card-image">
-                  <img src="pictures/putting-on-makeup.jpg" alt="" />
+                  <img src="pictures/putting-on-makeup.jpg" alt="" >
                 </div>
                 <div class="card-text">
                   <div class="card-title">
@@ -106,7 +104,7 @@
                   </div>
                 </div>
                 <div class="card-btn">
-                  <button type="button">läs mer</button>
+                  <span class="uppercase">läs mer</span>
                 </div>
               </a>
             </article>
@@ -114,7 +112,7 @@
             <article class="card">
               <a href="https://www.ipsy.com/blog/makeup-for-beginners">
                 <div class="card-image">
-                  <img src="pictures/makeup.jpg" alt="" />
+                  <img src="pictures/makeup.jpg" alt="" >
                 </div>
                 <div class="card-text">
                   <div class="card-title">
@@ -128,7 +126,7 @@
                   </div>
                 </div>
                 <div class="card-btn">
-                  <button type="button">läs mer</button>
+                  <span class="uppercase">läs mer</span>
                 </div>
               </a>
             </article>
@@ -138,7 +136,7 @@
                 href="https://www.instyle.com/beauty/makeup/how-to-do-winged-liner"
               >
                 <div class="card-image">
-                  <img src="pictures/eyeliner.jpg" alt="" />
+                  <img src="pictures/eyeliner.jpg" alt="" >
                 </div>
                 <div class="card-text">
                   <div class="card-title">
@@ -155,13 +153,14 @@
                   </div>
                 </div>
                 <div class="card-btn">
-                  <button type="button">läs mer</button>
+                  <span class="uppercase">läs mer</span>
                 </div>
               </a>
             </article>
           </div>
         </div>
       </section>
+
     </main>
 
     <footer>
@@ -169,5 +168,8 @@
         <p>&copy; 2023 Makeup Tutorial</p>
       </div>
     </footer>
+
+    <a href="#page-intro" class="ankarlänk">gå upp</a>
+
   </body>
 </html>
