--- a/tutorials.html
+++ b/tutorials.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="style.css" >
     <title>Tutorials- Makeup Tutorial</title>
   </head>
   <body>
@@ -11,9 +11,9 @@
       <h1>LH Cosmetics</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Start</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Om oss</a></li>
         </ul>
       </nav>
     </header>
@@ -25,13 +25,11 @@
           här hittar du en liten samling video tutorials som är utformade för
           att guida dig steg för steg genom olika makeup-tekniker. Våra
           makeup-experter delar med sig av sina hemligheter och ger dig de bästa
-          tipsen för att uppnå en professionell look. Oavsett om du vill
-          behärska smokey eyes, contouring, eller skapa den perfekta röda
-          läppen, våra tutorials är här för att hjälpa dig. Vi förstår att varje
-          person har sin egen unika stil och sminkpreferens. Därför inkluderar
-          våra tutorials olika looks, från naturlig vardagsmakeup till glamorösa
-          festmakeuper. Du kommer att lära dig användbara tekniker och få insikt
-          i de senaste trenderna inom makeupvärlden.
+          tipsen för att uppnå en professionell look.
+        </p>
+        <p class="sidenote">
+          notera att våra tutorials är på engelska LH Cosmetics är ett globalt
+          företag
         </p>
       </section>
       <section id="tutorials">
@@ -46,7 +44,7 @@
             ></iframe>
             <p>Fall is here. Here is how you extend that summer glow.</p>
           </li>
-          <li >
+          <li>
             <h3>Two eyeliner techniques for hooded eyes</h3>
             <iframe
               src="https://www.youtube.com/embed/kqKr3NrQ0n0?si=l7w2lbZ3PHvBvvE8"
@@ -60,7 +58,7 @@
               Which side do you like the most?
             </p>
           </li>
-          <li >
+          <li>
             <h3>How to apply the base tutorial</h3>
             <iframe
               src="https://www.youtube.com/embed/AY02r-6wuCE?si=6p4opujgrGxJTCW1"
@@ -74,7 +72,7 @@
             </p>
           </li>
 
-          <li >
+          <li>
             <h3>Done Quick - Daily makeup routine</h3>
             <iframe
               src="https://www.youtube.com/embed/2Sok_c8__Bs?si=yaU9vd5uOcrl4sCb"
@@ -96,5 +94,7 @@
         <p>&copy; 2023 Makeup Tutorial</p>
       </div>
     </footer>
+    <a href="#page-intro" class="ankarlänk">gå upp</a>
+
   </body>
 </html>
